<resources>
    <string name="app_name">یادداشت</string>
    <string name="new_note">یادداشت جدید</string>
    <string name="title">عنوان</string>
    <string name="desc">یادداشت</string>
    <string name="back">بازگشت</string>
    <string name="save">ثبت</string>
    <string name="delete_note">حذف یادداشت</string>
    <string name="delete">حذف</string>
    <string name="cancel">لغو</string>
    <string name="exit">خروج</string>
    <string name="are_you_sure">مطمئنی یادداشتی یادت نرفته؟</string>
    <string name="yes_sure">آره مطمئنم</string>
    <string name="not_sure">انصراف</string>
    <string name="change_save">ثبت ویرایش</string>
    <string name="sure_to_back">برای برگشت مطمئنی؟</string>
    <string name="txt_positive">آره</string>
    <string name="txt_negative">انصراف</string>
    <string name="toast_title_empty">عنوان را وارد کنید</string>
    <string name="toast_desc_empty">یادداشت خود را وارد کنید</string>
    <string name="txt_error_edtTitle">عنوان را وارد کنید</string>
</resources>
